jallybean-telemetry-bundle/k8s/telemetry-ingestor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-ingestor
spec:
  type: ClusterIP
  selector:
    app: telemetry-ingestor
  ports:
    - name: http
      port: 8080
      targetPort: 8080
